--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,9 @@
 ---
+# Variables for /etc/default/mumble-server
+murmur_daemon_start: 1
+murmur_use_capabilities: 0
+
+# Variables for /etc/mumble-server.ini
 # Upstream sample configuration in comments.
 
 murmur_database: "/var/lib/mumble-server/mumble-server.sqlite"
